Compatible with newer versions
Making this compatible with pmmp alpha 5 and alpha 7

--- a/Spawner-MASTER/plugin.yml
+++ b/Spawner-MASTER/plugin.yml
@@ -1,7 +1,7 @@
 name: Spawner-Mystical
 main: Karanpatel567\Main
 version: 0.1
-api: 3.0.0
+api: [1.0.0, 2.0.0, 3.0.0, 3.0.0-ALPHA5, 3.0.0-ALPHA7]
 author: Karanpatel567
 commands:
   spawner:
